--- a/2FSemesterProjekt2024/appsettings.json
+++ b/2FSemesterProjekt2024/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=mssql1.unoeuro.com,1433;Initial Catalog=jbased_dk_db_driver_db;User ID=jbased_dk;Password=RnbHpmGhykF5cr92xAda;TrustServerCertificate=True;Encrypt=False;"
+  }
+
 }
