--- a/2FSemesterProjekt2024/2FSemesterProjekt2024.csproj
+++ b/2FSemesterProjekt2024/2FSemesterProjekt2024.csproj
@@ -7,4 +7,18 @@
     <RootNamespace>_2FSemesterProjekt2024</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Driver\" />
+    <Folder Include="Pages\Booking\" />
+    <Folder Include="Pages\Passenger\" />
+  </ItemGroup>
+
 </Project>
