--- a/2FSemesterProjekt2024/2FSemesterProjekt2024.csproj
+++ b/2FSemesterProjekt2024/2FSemesterProjekt2024.csproj
@@ -30,4 +30,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Bookings\BookingDriver\" />
+    <Folder Include="Pages\Bookings\BookingPassenger\" />
+  </ItemGroup>
+
 </Project>
